// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a relative change 1`] = `
<View
  sentry-label="Flex"
  style={
    [
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <svg
    color="#40B66B"
    data-file-name="SvgArrowChange"
    height={16}
    strokeWidth={2}
    style={
      {
        "transform": [
          {
            "rotate": "180deg",
          },
        ],
      }
    }
    width={16}
  />
  <View
    style={
      [
        {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 2,
          "width": 2,
        },
      ]
    }
  />
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      [
        {
          "color": "#7D7D7D",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    12.00%
  </Text>
</View>
`;

exports[`renders placeholders with absolute change 1`] = `
<View
  sentry-label="Flex"
  style={
    [
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <svg
    color="#40B66B"
    data-file-name="SvgArrowChange"
    height={16}
    strokeWidth={2}
    style={
      {
        "transform": [
          {
            "rotate": "180deg",
          },
        ],
      }
    }
    width={16}
  />
  <View
    style={
      [
        {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 2,
          "width": 2,
        },
      ]
    }
  />
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      [
        {
          "color": "#7D7D7D",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    $100.00 (12.00%)
  </Text>
</View>
`;

exports[`renders placeholders without a change 1`] = `
<View
  sentry-label="Flex"
  style={
    [
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      [
        {
          "color": "#7D7D7D",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    -
  </Text>
</View>
`;
